Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Code here \n",
-    "import req"
+    "import requests"
    ]
   },
   {
@@ -63,7 +63,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "resp = requests.get('https://www.google.com')"
    ]
   },
   {
