--- a/index.ipynb
+++ b/index.ipynb
@@ -85,9 +85,21 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "200"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Code here \n",
+    "resp.status_code"
    ]
   },
   {
