Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,27 @@
    ],
    "source": [
     "# Code here \n",
-    "resp.status_code"
+    "resp.status_code\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resp.status_code == requests.codes.ok"
    ]
   },
   {
