--- a/index.ipynb
+++ b/index.ipynb
@@ -104,22 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "<lookup 'status_codes'>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "resp.status_code == requests.codes.ok"
+    "requests.codes"
    ]
   },
   {
