Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,300 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['-O-',\n",
-       " '-o-',\n",
-       " '/o\\\\',\n",
-       " 'ACCEPTED',\n",
-       " 'ALL_GOOD',\n",
-       " 'ALL_OK',\n",
-       " 'ALL_OKAY',\n",
-       " 'ALREADY_REPORTED',\n",
-       " 'BAD',\n",
-       " 'BAD_GATEWAY',\n",
-       " 'BAD_REQUEST',\n",
-       " 'BANDWIDTH',\n",
-       " 'BANDWIDTH_LIMIT_EXCEEDED',\n",
-       " 'BLOCKED_BY_WINDOWS_PARENTAL_CONTROLS',\n",
-       " 'CHECKPOINT',\n",
-       " 'CLIENT_CLOSED_REQUEST',\n",
-       " 'CONFLICT',\n",
-       " 'CONTINUE',\n",
-       " 'CREATED',\n",
-       " 'DEPENDENCY',\n",
-       " 'EXPECTATION_FAILED',\n",
-       " 'FAILED_DEPENDENCY',\n",
-       " 'FIELDS_TOO_LARGE',\n",
-       " 'FORBIDDEN',\n",
-       " 'FOUND',\n",
-       " 'GATEWAY_TIMEOUT',\n",
-       " 'GONE',\n",
-       " 'HEADER_FIELDS_TOO_LARGE',\n",
-       " 'HTTP_VERSION',\n",
-       " 'HTTP_VERSION_NOT_SUPPORTED',\n",
-       " 'IM_A_TEAPOT',\n",
-       " 'IM_USED',\n",
-       " 'INSUFFICIENT_STORAGE',\n",
-       " 'INTERNAL_SERVER_ERROR',\n",
-       " 'I_AM_A_TEAPOT',\n",
-       " 'LEGAL_REASONS',\n",
-       " 'LENGTH_REQUIRED',\n",
-       " 'LOCKED',\n",
-       " 'MEDIA_TYPE',\n",
-       " 'METHOD_NOT_ALLOWED',\n",
-       " 'MISDIRECTED_REQUEST',\n",
-       " 'MOVED',\n",
-       " 'MOVED_PERMANENTLY',\n",
-       " 'MULTIPLE_CHOICES',\n",
-       " 'MULTIPLE_STATI',\n",
-       " 'MULTIPLE_STATUS',\n",
-       " 'MULTI_STATI',\n",
-       " 'MULTI_STATUS',\n",
-       " 'NETWORK_AUTH',\n",
-       " 'NETWORK_AUTHENTICATION',\n",
-       " 'NETWORK_AUTHENTICATION_REQUIRED',\n",
-       " 'NONE',\n",
-       " 'NON_AUTHORITATIVE_INFO',\n",
-       " 'NON_AUTHORITATIVE_INFORMATION',\n",
-       " 'NOT_ACCEPTABLE',\n",
-       " 'NOT_ALLOWED',\n",
-       " 'NOT_EXTENDED',\n",
-       " 'NOT_FOUND',\n",
-       " 'NOT_IMPLEMENTED',\n",
-       " 'NOT_MODIFIED',\n",
-       " 'NO_CONTENT',\n",
-       " 'NO_RESPONSE',\n",
-       " 'OK',\n",
-       " 'OKAY',\n",
-       " 'OTHER',\n",
-       " 'PARENTAL_CONTROLS',\n",
-       " 'PARTIAL',\n",
-       " 'PARTIAL_CONTENT',\n",
-       " 'PAYMENT',\n",
-       " 'PAYMENT_REQUIRED',\n",
-       " 'PERMANENT_REDIRECT',\n",
-       " 'PRECONDITION',\n",
-       " 'PRECONDITION_FAILED',\n",
-       " 'PRECONDITION_REQUIRED',\n",
-       " 'PROCESSING',\n",
-       " 'PROXY_AUTH',\n",
-       " 'PROXY_AUTHENTICATION',\n",
-       " 'PROXY_AUTHENTICATION_REQUIRED',\n",
-       " 'RANGE_NOT_SATISFIABLE',\n",
-       " 'REQUESTED_RANGE',\n",
-       " 'REQUESTED_RANGE_NOT_SATISFIABLE',\n",
-       " 'REQUEST_ENTITY_TOO_LARGE',\n",
-       " 'REQUEST_TIMEOUT',\n",
-       " 'REQUEST_URI_TOO_LARGE',\n",
-       " 'REQUEST_URI_TOO_LONG',\n",
-       " 'RESET',\n",
-       " 'RESET_CONTENT',\n",
-       " 'RESUME',\n",
-       " 'RESUME_INCOMPLETE',\n",
-       " 'RETRY',\n",
-       " 'RETRY_WITH',\n",
-       " 'SEE_OTHER',\n",
-       " 'SERVER_ERROR',\n",
-       " 'SERVICE_UNAVAILABLE',\n",
-       " 'SWITCHING_PROTOCOLS',\n",
-       " 'SWITCH_PROXY',\n",
-       " 'TEAPOT',\n",
-       " 'TEMPORARY',\n",
-       " 'TEMPORARY_MOVED',\n",
-       " 'TEMPORARY_REDIRECT',\n",
-       " 'TIMEOUT',\n",
-       " 'TOO_MANY',\n",
-       " 'TOO_MANY_REQUESTS',\n",
-       " 'UNAUTHORIZED',\n",
-       " 'UNAVAILABLE',\n",
-       " 'UNAVAILABLE_FOR_LEGAL_REASONS',\n",
-       " 'UNORDERED',\n",
-       " 'UNORDERED_COLLECTION',\n",
-       " 'UNPROCESSABLE',\n",
-       " 'UNPROCESSABLE_ENTITY',\n",
-       " 'UNSUPPORTED_MEDIA',\n",
-       " 'UNSUPPORTED_MEDIA_TYPE',\n",
-       " 'UPGRADE',\n",
-       " 'UPGRADE_REQUIRED',\n",
-       " 'URI_TOO_LONG',\n",
-       " 'USE_PROXY',\n",
-       " 'VARIANT_ALSO_NEGOTIATES',\n",
-       " '\\\\o-',\n",
-       " '\\\\o/',\n",
-       " '__class__',\n",
-       " '__contains__',\n",
-       " '__delattr__',\n",
-       " '__delitem__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__getattribute__',\n",
-       " '__getitem__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__len__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__setattr__',\n",
-       " '__setitem__',\n",
-       " '__sizeof__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " 'accepted',\n",
-       " 'all_good',\n",
-       " 'all_ok',\n",
-       " 'all_okay',\n",
-       " 'already_reported',\n",
-       " 'bad',\n",
-       " 'bad_gateway',\n",
-       " 'bad_request',\n",
-       " 'bandwidth',\n",
-       " 'bandwidth_limit_exceeded',\n",
-       " 'blocked_by_windows_parental_controls',\n",
-       " 'checkpoint',\n",
-       " 'clear',\n",
-       " 'client_closed_request',\n",
-       " 'conflict',\n",
-       " 'continue',\n",
-       " 'copy',\n",
-       " 'created',\n",
-       " 'dependency',\n",
-       " 'expectation_failed',\n",
-       " 'failed_dependency',\n",
-       " 'fields_too_large',\n",
-       " 'forbidden',\n",
-       " 'found',\n",
-       " 'fromkeys',\n",
-       " 'gateway_timeout',\n",
-       " 'get',\n",
-       " 'gone',\n",
-       " 'header_fields_too_large',\n",
-       " 'http_version',\n",
-       " 'http_version_not_supported',\n",
-       " 'i_am_a_teapot',\n",
-       " 'im_a_teapot',\n",
-       " 'im_used',\n",
-       " 'insufficient_storage',\n",
-       " 'internal_server_error',\n",
-       " 'items',\n",
-       " 'keys',\n",
-       " 'legal_reasons',\n",
-       " 'length_required',\n",
-       " 'locked',\n",
-       " 'media_type',\n",
-       " 'method_not_allowed',\n",
-       " 'misdirected_request',\n",
-       " 'moved',\n",
-       " 'moved_permanently',\n",
-       " 'multi_stati',\n",
-       " 'multi_status',\n",
-       " 'multiple_choices',\n",
-       " 'multiple_stati',\n",
-       " 'multiple_status',\n",
-       " 'name',\n",
-       " 'network_auth',\n",
-       " 'network_authentication',\n",
-       " 'network_authentication_required',\n",
-       " 'no_content',\n",
-       " 'no_response',\n",
-       " 'non_authoritative_info',\n",
-       " 'non_authoritative_information',\n",
-       " 'none',\n",
-       " 'not_acceptable',\n",
-       " 'not_allowed',\n",
-       " 'not_extended',\n",
-       " 'not_found',\n",
-       " 'not_implemented',\n",
-       " 'not_modified',\n",
-       " 'ok',\n",
-       " 'okay',\n",
-       " 'other',\n",
-       " 'parental_controls',\n",
-       " 'partial',\n",
-       " 'partial_content',\n",
-       " 'payment',\n",
-       " 'payment_required',\n",
-       " 'permanent_redirect',\n",
-       " 'pop',\n",
-       " 'popitem',\n",
-       " 'precondition',\n",
-       " 'precondition_failed',\n",
-       " 'precondition_required',\n",
-       " 'processing',\n",
-       " 'proxy_auth',\n",
-       " 'proxy_authentication',\n",
-       " 'proxy_authentication_required',\n",
-       " 'range_not_satisfiable',\n",
-       " 'request_entity_too_large',\n",
-       " 'request_timeout',\n",
-       " 'request_uri_too_large',\n",
-       " 'request_uri_too_long',\n",
-       " 'requested_range',\n",
-       " 'requested_range_not_satisfiable',\n",
-       " 'reset',\n",
-       " 'reset_content',\n",
-       " 'resume',\n",
-       " 'resume_incomplete',\n",
-       " 'retry',\n",
-       " 'retry_with',\n",
-       " 'see_other',\n",
-       " 'server_error',\n",
-       " 'service_unavailable',\n",
-       " 'setdefault',\n",
-       " 'switch_proxy',\n",
-       " 'switching_protocols',\n",
-       " 'teapot',\n",
-       " 'temporary',\n",
-       " 'temporary_moved',\n",
-       " 'temporary_redirect',\n",
-       " 'timeout',\n",
-       " 'too_many',\n",
-       " 'too_many_requests',\n",
-       " 'unauthorized',\n",
-       " 'unavailable',\n",
-       " 'unavailable_for_legal_reasons',\n",
-       " 'unordered',\n",
-       " 'unordered_collection',\n",
-       " 'unprocessable',\n",
-       " 'unprocessable_entity',\n",
-       " 'unsupported_media',\n",
-       " 'unsupported_media_type',\n",
-       " 'update',\n",
-       " 'upgrade',\n",
-       " 'upgrade_required',\n",
-       " 'uri_too_long',\n",
-       " 'use_proxy',\n",
-       " 'values',\n",
-       " 'variant_also_negotiates',\n",
-       " '✓',\n",
-       " '✗']"
+       "<function LookupDict.keys>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dir(requests.codes)"
+    "requests.codes.keys"
    ]
   },
   {
