--- a/index.ipynb
+++ b/index.ipynb
@@ -177,11 +177,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Date': 'Wed, 15 May 2019 15:33:43 GMT',\n",
+       " 'Expires': '-1',\n",
+       " 'Cache-Control': 'private, max-age=0',\n",
+       " 'Content-Type': 'text/html; charset=ISO-8859-1',\n",
+       " 'P3P': 'CP=\"This is not a P3P policy! See g.co/p3phelp for more info.\"',\n",
+       " 'Content-Encoding': 'gzip',\n",
+       " 'Server': 'gws',\n",
+       " 'X-XSS-Protection': '0',\n",
+       " 'X-Frame-Options': 'SAMEORIGIN',\n",
+       " 'Set-Cookie': '1P_JAR=2019-05-15-15; expires=Fri, 14-Jun-2019 15:33:43 GMT; path=/; domain=.google.com, NID=183=z9sHhtVuq4JyVa06sZi-Rh9T8Jn1IVNVsAgG_YHScJG9xM907dr1RSwx0tk689e0szfBOVM0vHyjnMNhjTzhY2gKAx99lWbUIAL2s38-rLhxRFZzg-pseC6Ig2Vm0xOVRa_n8L0aqAh6pkGpWIKnnQFjfjSzvDOKRQmMtoEOmU8; expires=Thu, 14-Nov-2019 15:33:43 GMT; path=/; domain=.google.com; HttpOnly',\n",
+       " 'Alt-Svc': 'quic=\":443\"; ma=2592000; v=\"46,44,43,39\"',\n",
+       " 'Transfer-Encoding': 'chunked'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Code here "
+    "dict(resp.headers)"
    ]
   },
   {
