Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -265,11 +265,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-13-2e88dd930228>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-2e88dd930228>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    = requests.get('http://httpbin.org/get')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here \n"
+    "# Code here \n",
+    " = requests.get('http://httpbin.org/get')\n",
+    "\n",
+    "response = r.json()  \n",
+    "print(r.json())  \n",
+    "print(response['args'])  \n",
+    "print(response['headers'])  \n",
+    "print(response['headers']['Accept'])  \n",
+    "print(response['headers']['Accept-Encoding'])  \n",
+    "print(response['headers']['Connection'])  \n",
+    "print(response['headers']['Host'])  \n",
+    "print(response['headers']['User-Agent'])  \n",
+    "print(response['origin'])  \n",
+    "print(response['url'])"
    ]
   },
   {
