Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,11 +369,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://httpbin.org/get?user_name=FlatironSchool&password=learnlovecode\n",
+      "{\n",
+      "  \"args\": {\n",
+      "    \"password\": \"learnlovecode\", \n",
+      "    \"user_name\": \"FlatironSchool\"\n",
+      "  }, \n",
+      "  \"headers\": {\n",
+      "    \"Accept\": \"*/*\", \n",
+      "    \"Accept-Encoding\": \"gzip, deflate\", \n",
+      "    \"Host\": \"httpbin.org\", \n",
+      "    \"User-Agent\": \"python-requests/2.19.1\"\n",
+      "  }, \n",
+      "  \"origin\": \"157.230.80.188, 157.230.80.188\", \n",
+      "  \"url\": \"https://httpbin.org/get?user_name=FlatironSchool&password=learnlovecode\"\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "credentials = {'user_name': 'FlatironSchool', 'password': 'learnlovecode'}  \n",
+    "r = requests.get('http://httpbin.org/get', params=credentials)\n",
+    "\n",
+    "print(r.url)  \n",
+    "print(r.text)"
    ]
   },
   {
