Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -457,6 +457,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTRIBUTING.md  images  index.ipynb  LICENSE.md  README.md\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
